# MetasequoiaImeEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  README.md
core/: composition_state.h  ime_session.cpp  ime_session.h  query_request.h  scheme_type.h  word_item.h
providers/: candidate_provider.h  pinyin_candidate_provider.cpp  pinyin_candidate_provider.h  provider_registry.cpp  provider_registry.h
schemes/: input_scheme.h  quanpin_scheme.cpp  quanpin_scheme.h  shuangpin_scheme.cpp  shuangpin_scheme.h
shuangpin/: common_utils.cpp  common_utils.h  dictionary.cpp  dictionary.h  global_ime_vars.h  pinyin_utils.cpp  pinyin_utils.h
tests/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
tests/scripts/: prepare_env.py
tests/scripts/config_files/: .clangd  CMakeLists.txt
tests/src/: test_pinyin.cpp  test_quanpin.cpp  test_shuangpin.cpp
